# Air-Quality

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
EDA/: Beijing Multi-Site Air Quality.ipynb
components/: setup.py
components/get_data/: MLproject  MLproject.yaml  __init__.py  run.py
components/get_data/utils/: utils.py
components/get_data/wandb_utils/: log_artifact.py  utils.py
test/: __init__.py  test_main.py  test_script_run.py  test_utils.py
