[project]
name = "air-quality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "mlflow>=2.22.0",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=80.8.0",
    "wandb>=0.19.11",
]
